--- a/popup.html
+++ b/popup.html
@@ -914,17 +914,15 @@
                                     </div>
                                     <div class="flex flex1 viewDataInner">
                                         <span class="listViewPieDataIcon flex alignCenter">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                                                viewBox="0 0 14 14">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="16"
+                                                viewBox="0 0 11 16">
                                                 <g fill="none" fill-rule="evenodd">
                                                     <g fill="#8995A8" fill-rule="nonzero">
                                                         <g>
                                                             <g>
-                                                                <g>
-                                                                    <path
-                                                                        d="M1.448 10.138v2.172c0 .134.108.242.242.242h2.172V14H1.69C.756 14 0 13.244 0 12.31v-2.172h1.448zm12.552 0v2.172c0 .934-.756 1.69-1.69 1.69h-2.172v-1.448h2.172c.134 0 .242-.108.242-.242v-2.172H14zm-6.276-8.69v2.004c1.423.29 2.534 1.401 2.824 2.824h2.004v1.448h-2.004c-.29 1.423-1.401 2.534-2.824 2.824v2.004H6.276v-2.004c-1.423-.29-2.534-1.401-2.824-2.824H1.448V6.276h2.004c.29-1.423 1.401-2.534 2.824-2.824V1.448h1.448zM7 4.828C5.8 4.828 4.828 5.8 4.828 7c0 1.2.972 2.172 2.172 2.172C8.2 9.172 9.172 8.2 9.172 7 9.172 5.8 8.2 4.828 7 4.828zM3.862 0v1.448H1.69c-.134 0-.242.108-.242.242v2.172H0V1.69C0 .756.756 0 1.69 0h2.172zm8.448 0C13.244 0 14 .756 14 1.69v2.172h-1.448V1.69c0-.134-.108-.242-.242-.242h-2.172V0z"
-                                                                        transform="translate(-193 -205) translate(12 104) translate(181 100) translate(0 1)" />
-                                                                </g>
+                                                                <path
+                                                                    d="M10.158 8.894c-.208.79-1.041 2.546-1.041 2.546l-2.657-.664s.243-1.429.074-1.98c-.177-.58-.394-1.506-.394-2.39 0-1.227.232-1.703.81-2.633.284-.459.99-.777 1.63-.744.39.02.782.157 1.104.45.447.408.683 1.05.776 1.81.182 1.485.126 1.971-.302 3.605zm-4.672 4.601c-.16.49-.254.952-.169 1.488.052.326.271.597.707.794.483.218.925.209 1.01.212.415-.064.717-.252.946-.525.486-.577.804-2.636.804-2.636l-2.775-.738s-.375.956-.523 1.405zM.274 5.66c.116.81.741 2.65.741 2.65l2.716-.354s-.077-1.448.154-1.975c.243-.556.566-1.45.667-2.33.14-1.218-.034-1.717-.501-2.708-.23-.488-.895-.886-1.534-.927-.39-.025-.794.066-1.148.32C.878.69.57 1.3.39 2.043.039 3.498.038 3.987.275 5.659zm3.753 3.653l-2.84.414s.078 2.081.493 2.711c.196.297.474.519.88.63.084.007.523.067 1.027-.094.456-.145.705-.389.794-.707.147-.523.107-.992.004-1.497-.095-.464-.358-1.457-.358-1.457z"
+                                                                    transform="translate(-195 -204) translate(12 104) translate(183 100)" />
                                                             </g>
                                                         </g>
                                                     </g>
@@ -999,7 +997,7 @@
                                 </div>
                                 <div class="totalDataViewBody">
                                     <ul>
-                                        <li>
+                                        <li class="siteBlockDesc">
                                             <div class="flex alignCenter">
                                                 <span class="totalDataViewBodyIcon  flex alignCenter">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
@@ -1025,24 +1023,23 @@
                                                 </span>
                                             </div>
                                         </li>
-                                        <li>
+                                        <li class="trackerBlockDesc">
                                             <div class="flex alignCenter">
                                                 <span class="totalDataViewBodyIcon flex alignCenter">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                                                        viewBox="0 0 14 14">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="16"
+                                                        viewBox="0 0 11 16">
                                                         <g fill="none" fill-rule="evenodd">
                                                             <g fill="#8995A8" fill-rule="nonzero">
                                                                 <g>
                                                                     <g>
                                                                         <path
-                                                                            d="M1.448 10.138v2.172c0 .134.108.242.242.242h2.172V14H1.69C.756 14 0 13.244 0 12.31v-2.172h1.448zm12.552 0v2.172c0 .934-.756 1.69-1.69 1.69h-2.172v-1.448h2.172c.134 0 .242-.108.242-.242v-2.172H14zm-6.276-8.69v2.004c1.423.29 2.534 1.401 2.824 2.824h2.004v1.448h-2.004c-.29 1.423-1.401 2.534-2.824 2.824v2.004H6.276v-2.004c-1.423-.29-2.534-1.401-2.824-2.824H1.448V6.276h2.004c.29-1.423 1.401-2.534 2.824-2.824V1.448h1.448zM7 4.828C5.8 4.828 4.828 5.8 4.828 7c0 1.2.972 2.172 2.172 2.172C8.2 9.172 9.172 8.2 9.172 7 9.172 5.8 8.2 4.828 7 4.828zM3.862 0v1.448H1.69c-.134 0-.242.108-.242.242v2.172H0V1.69C0 .756.756 0 1.69 0h2.172zm8.448 0C13.244 0 14 .756 14 1.69v2.172h-1.448V1.69c0-.134-.108-.242-.242-.242h-2.172V0z"
-                                                                            transform="translate(-32 -457) translate(32 452) translate(0 5)" />
+                                                                            d="M10.158 8.894c-.208.79-1.041 2.546-1.041 2.546l-2.657-.664s.243-1.429.074-1.98c-.177-.58-.394-1.506-.394-2.39 0-1.227.232-1.703.81-2.633.284-.459.99-.777 1.63-.744.39.02.782.157 1.104.45.447.408.683 1.05.776 1.81.182 1.485.126 1.971-.302 3.605zm-4.672 4.601c-.16.49-.254.952-.169 1.488.052.326.271.597.707.794.483.218.925.209 1.01.212.415-.064.717-.252.946-.525.486-.577.804-2.636.804-2.636l-2.775-.738s-.375.956-.523 1.405zM.274 5.66c.116.81.741 2.65.741 2.65l2.716-.354s-.077-1.448.154-1.975c.243-.556.566-1.45.667-2.33.14-1.218-.034-1.717-.501-2.708-.23-.488-.895-.886-1.534-.927-.39-.025-.794.066-1.148.32C.878.69.57 1.3.39 2.043.039 3.498.038 3.987.275 5.659zm3.753 3.653l-2.84.414s.078 2.081.493 2.711c.196.297.474.519.88.63.084.007.523.067 1.027-.094.456-.145.705-.389.794-.707.147-.523.107-.992.004-1.497-.095-.464-.358-1.457-.358-1.457z"
+                                                                            transform="translate(-195 -204) translate(12 104) translate(183 100)" />
                                                                     </g>
                                                                 </g>
                                                             </g>
                                                         </g>
                                                     </svg>
-
                                                 </span>
                                                 <span class="totalDataViewBodyText flex1">
                                                     Total trackers blocked
