blocksite UI done

--- a/blockSite.html
+++ b/blockSite.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Blocked</title>
 </head>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./styles/blockSite.css">
+
 <body>
-<script type="text/javascript" src="blockSiteScript.js"></script>
+    <main class="siteMainContainer">
+        <header class="siteHeader">
+            <div class="xContainer">
+                <div class="xLogo">
+                    <h1>LogoName</h1>
+                </div>
+            </div>
+        </header>
+        <section class="siteBody">
+            <div class="xContainer">
+                <div class="blockedSiteWrp">
+                    <div class="blockedIcon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="108" viewBox="0 0 100 108">
+                            <g fill="none" fill-rule="evenodd">
+                                <g>
+                                    <g>
+                                        <g transform="translate(-633 -70) translate(633 70)">
+                                            <circle cx="49.371" cy="49.371" r="46.727" stroke="#D2DCE8"
+                                                stroke-width="5.29" />
+                                            <g fill="#FFF" fill-rule="nonzero">
+                                                <path
+                                                    d="M27.154 0C38.792 0 48.49 7.758 54.31 17.456c-5.82 9.698-15.517 17.457-27.155 17.457C15.517 34.913 5.82 27.154 0 17.456 5.819 7.758 15.517 0 27.154 0zm0 4.849c-6.963 0-12.607 5.644-12.607 12.607 0 6.963 5.644 12.608 12.607 12.608 6.963 0 12.608-5.645 12.608-12.608 0-6.963-5.645-12.607-12.608-12.607zm0 4.849c4.285 0 7.759 3.473 7.759 7.758s-3.474 7.759-7.759 7.759-7.758-3.474-7.758-7.759 3.473-7.758 7.758-7.758z"
+                                                    transform="translate(22.04 31.739)" />
+                                            </g>
+                                            <path fill="#D2DCE8" d="M46.727 0H52.016999999999996V98.743H46.727z"
+                                                transform="rotate(45 49.371 49.371)" />
+                                        </g>
+                                        <g transform="translate(-633 -70) translate(633 70) translate(1.102 74.939)">
+                                            <rect width="97.861" height="32.62" fill="#C10F0F" rx="16.31" />
+                                            <path fill="#FFF" fill-rule="nonzero"
+                                                d="M23.443 22.053c.883 0 1.615-.137 2.198-.411.582-.275 1.018-.65 1.307-1.125.29-.475.434-1.011.434-1.609 0-.586-.12-1.085-.36-1.499-.241-.413-.55-.733-.928-.96-.377-.228-.77-.353-1.18-.375v-.113c.375-.09.715-.238 1.02-.445.304-.207.546-.476.727-.809.18-.332.27-.733.27-1.203 0-.571-.138-1.082-.414-1.533-.276-.45-.691-.807-1.246-1.068-.554-.26-1.248-.391-2.082-.391h-4.418v11.541h4.672zm-.513-6.633h-2.068v-3.184h2.113c.616 0 1.081.145 1.395.434.314.29.47.658.47 1.105 0 .338-.083.63-.25.876-.168.246-.396.436-.685.57-.29.132-.614.2-.975.2zm.18 4.886h-2.248v-3.381h2.305c.432 0 .804.08 1.115.24.312.159.553.377.722.653.169.276.253.585.253.927 0 .458-.168.833-.504 1.124-.336.291-.884.437-1.643.437zm8.042 1.747V10.512h-2.04v11.541h2.04zm5.872.17c.846 0 1.578-.187 2.198-.559.62-.372 1.1-.892 1.44-1.56.34-.67.51-1.451.51-2.345 0-.894-.17-1.678-.51-2.35-.34-.673-.82-1.195-1.44-1.567-.62-.372-1.352-.558-2.198-.558-.845 0-1.578.186-2.198.558-.62.372-1.1.894-1.44 1.567-.34.672-.51 1.456-.51 2.35 0 .894.17 1.675.51 2.344.34.669.82 1.19 1.44 1.561.62.372 1.353.558 2.198.558zm.011-1.635c-.47 0-.859-.127-1.169-.38-.31-.254-.54-.595-.693-1.023-.152-.429-.228-.906-.228-1.432 0-.53.076-1.01.228-1.44.152-.43.383-.773.693-1.028.31-.256.7-.383 1.17-.383.458 0 .841.127 1.15.383.307.255.537.598.69 1.028.152.43.228.91.228 1.44 0 .526-.076 1.003-.229 1.432-.152.428-.382.769-.69 1.022-.308.254-.691.38-1.15.38zm9.637 1.634c.725 0 1.356-.132 1.894-.397.537-.265.961-.633 1.273-1.105.312-.471.492-1.013.541-1.626h-1.95c-.06.312-.17.577-.332.795-.162.218-.362.384-.6.499-.239.114-.508.172-.809.172-.425 0-.794-.114-1.107-.341-.314-.228-.557-.553-.73-.975-.173-.423-.26-.93-.26-1.519 0-.582.088-1.082.263-1.499.174-.417.42-.737.735-.96.316-.224.682-.336 1.099-.336.492 0 .886.14 1.18.42.296.28.482.628.561 1.045h1.95c-.045-.624-.229-1.17-.552-1.637-.323-.468-.756-.83-1.3-1.088-.542-.257-1.165-.386-1.867-.386-.846 0-1.577.19-2.195.567-.618.377-1.096.903-1.434 1.578-.339.674-.508 1.45-.508 2.33 0 .875.167 1.648.5 2.319.332.67.807 1.195 1.425 1.575.618.38 1.359.57 2.223.57zm7.428-11.71h-2.04v11.541h2.04l-.001-2.909.743-.796 2.65 3.705h2.44l-3.553-4.919 3.356-3.737h-2.384l-3.11 3.477-.142.001v-6.363zm10.82 11.71c.672 0 1.27-.102 1.792-.307.522-.205.951-.494 1.287-.868.337-.374.565-.812.685-1.316l-1.905-.214c-.09.244-.223.45-.4.614-.176.166-.385.29-.625.375-.24.085-.51.127-.806.127-.444 0-.83-.095-1.161-.285-.33-.19-.588-.464-.772-.822-.184-.36-.276-.79-.276-1.294v.051h6.03v-.626c0-.758-.106-1.413-.316-1.964-.21-.55-.499-1.004-.865-1.36-.366-.357-.787-.621-1.262-.792-.476-.171-.98-.257-1.513-.257-.827 0-1.546.19-2.159.567-.612.377-1.088.903-1.428 1.578-.34.674-.51 1.456-.51 2.347 0 .905.169 1.691.507 2.358.338.667.822 1.182 1.45 1.544.63.363 1.379.544 2.247.544zm-2.172-5.381c.027-.314.113-.606.258-.877.175-.325.42-.588.736-.789.315-.201.682-.301 1.099-.301.39 0 .733.088 1.028.264.295.177.525.418.69.725.166.306.25.654.254 1.045h-4.068l.003-.067zm10.957 5.364c.496 0 .908-.082 1.234-.248.327-.165.59-.365.79-.6.198-.235.35-.457.456-.668h.124v1.364h2.006V10.512h-2.046v4.316h-.084c-.105-.21-.254-.434-.445-.673-.192-.239-.451-.443-.778-.614-.327-.171-.744-.257-1.251-.257-.665 0-1.268.17-1.81.51-.54.34-.97.842-1.287 1.505-.317.663-.476 1.476-.476 2.437 0 .95.156 1.759.468 2.424.312.665.736 1.172 1.273 1.521.538.35 1.146.524 1.826.524zm.57-1.674c-.448 0-.824-.12-1.13-.363-.307-.242-.538-.575-.694-.997-.156-.423-.234-.905-.234-1.446 0-.537.077-1.014.232-1.431.154-.417.383-.744.687-.98.304-.238.684-.356 1.138-.356.44 0 .811.115 1.113.344.303.229.532.55.688.963.156.414.234.9.234 1.46 0 .56-.08 1.05-.237 1.47-.158.422-.389.75-.693.984-.304.235-.673.352-1.105.352z" />
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                    <div class="siteNameContainer">
+                        <h1 class="siteNameHeading">
+                            <span id="blockedSiteName" class="blockedSite">website.com</span>&nbsp;is blocked.
+                        </h1>
+                    </div>
+                </div>
+                <h2 class="quesHeading2">Still want to view this website?</h2>
+                <button id="siteUnblockBtn" class="siteUnblockBtn">Unblock It Here</button>
+                <div class="linkWrp">
+                    <a id="editSiteListBtn" class="editSiteListBtn">Edit Block List</a>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script type="text/javascript" src="blockSiteScript.js"></script>
 </body>
+
 </html>
