--- a/popup.html
+++ b/popup.html
@@ -697,6 +697,9 @@
                                                 <span class="searchBtnTxt">Search</span>
                                             </button>
                                         </div>
+                                        <div class="blockedWebsitesListMessage">
+                                            <h2 class="blockedWebsitesListHeading">You have not blocked any website yet!</h2>
+                                        </div>
                                         <div class="blockedWebsitesList" style="display:none">
                                             <h2 class="blockedWebsitesListHeading">Currently Blocked</h2>
                                             <ul class="blockedList" id='blockedWebsites'>
@@ -942,22 +945,22 @@
                             <!-- Details Container -->
                             <p class="heading">Details</p>
                             <div class="detailsContainer">
-                                <div class="flex directionColumn whiteContainer">
-                                    <div class="flex accordionContainer directionColumn">
-                                        <div class="accordionHeader flex alignCenter acc-toggler">
-                                            <p class="subHeading">Trackers</p>
-                                        </div>
-                                        <div class="accordionBody acc-body">
-                                            <ul id="trackSitesList">
-                                            </ul>
-                                        </div>
-                                    </div>
+                                <div class="flex directionColumn whiteContainer"> 
                                     <div class="flex accordionContainer directionColumn">
                                         <div class="accordionHeader flex alignCenter acc-toggler">
                                             <p class="subHeading">Risky Sites</p>
                                         </div>
                                         <div class="accordionBody acc-body">
                                             <ul id="riskySitesList">
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="flex accordionContainer directionColumn">
+                                        <div class="accordionHeader flex alignCenter acc-toggler">
+                                            <p class="subHeading">Trackers</p>
+                                        </div>
+                                        <div class="accordionBody acc-body">
+                                            <ul id="trackSitesList">
                                             </ul>
                                         </div>
                                     </div>
