--- a/popup.html
+++ b/popup.html
@@ -584,7 +584,7 @@
                                 </div>
 
                                 <div class="clearDataButtonContent">
-                                    <button class="clearData">
+                                    <button class="clearData disabled">
                                         Clear Data
                                     </button>
                                 </div>
