--- a/riskySite.html
+++ b/riskySite.html
@@ -97,7 +97,7 @@
             </h1>
 
             <p class="rsDescription">Do you still want to access this site?</p>
-            <button class="rsGoBack">
+            <button class="rsGoBack" id="rsProceedAnyway">
                 No, I want to go back
             </button>
             <a class="rsProceedAnyway">
