changes done and MD file added

--- a/riskySite.html
+++ b/riskySite.html
@@ -97,9 +97,9 @@
             <button class="rsGoBack" id="rsProceedAnyway">
                 No, I want to go back
             </button>
-            <a class="rsProceedAnyway">
+            <button class="rsProceedAnyway">
                 Proceed Anyway
-            </a>
+            </button>
         </div>
     </div>
 </div>
