--- a/popup.html
+++ b/popup.html
@@ -983,7 +983,7 @@
                                     <select id="statisticsType" class="flex1">
                                         <option value="all">All</option>
                                         <option value="rs">Risky Sites</option>
-                                        <option value="t">Tracker</option>
+                                        <option value="t">Trackers</option>
                                     </select>
                                     <select id="statisticsDayWise" class="flex1">
                                         <option value="7">Last 7 days</option>
