fixes done on the data

--- a/riskySite.html
+++ b/riskySite.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Security error</title>
+    <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/riskySites.css">
 </head>
 <body>
