--- a/blockSite.html
+++ b/blockSite.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Blocked</title>
 </head>
+<link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./styles/blockSite.css">
 
