--- a/riskySite.html
+++ b/riskySite.html
@@ -94,12 +94,12 @@
                 could be harmful
             </h1>
 
-            <p class="rsDescription">This website may contain phishing, malware, or unwanted software.</p>
+            <p class="rsDescription">This website may contain adware, malware, or unwanted software.</p>
             <button class="rsGoBack" id="rsProceedAnyway">
                 No, I want to go back
             </button>
             <button class="rsProceedAnyway">
-                Yes, unblock the site
+                Proceed Anyway
             </button>
         </div>
     </div>
