--- a/popup.html
+++ b/popup.html
@@ -927,6 +927,23 @@
                             <div class="flex directionColumn whiteContainer">
                                 <div class="flex accordionContainer directionColumn">
                                     <div class="accordionHeader flex alignCenter acc-toggler">
+                                        <span class="listViewPieDataIcon flex alignCenter">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14">
+                                                <g fill="none" fill-rule="evenodd">
+                                                    <g fill="#8995A8" fill-rule="nonzero">
+                                                        <g>
+                                                            <g>
+                                                                <g>
+                                                                    <path
+                                                                        d="M12.87 10.77C13.57 9.691 14 8.4 14 7s-.43-2.692-1.13-3.77c0 0 0-.053-.055-.053C11.577 1.238 9.423 0 7 0 4.577 0 2.423 1.238 1.185 3.123c0 0 0 .054-.054.054C.43 4.307 0 5.6 0 7s.43 2.692 1.13 3.77c0 0 0 .053.055.053C2.423 12.762 4.577 14 7 14c2.423 0 4.577-1.238 5.815-3.123.054-.054.054-.054.054-.108zM7 12.922c-.754 0-1.562-1.4-1.938-3.554 1.238-.323 2.638-.323 3.93 0-.43 2.154-1.238 3.554-1.992 3.554zM1.077 7c0-.97.215-1.885.646-2.692.646.43 1.346.807 2.1 1.077-.054.538-.108 1.077-.108 1.615s.054 1.077.108 1.615c-.754.27-1.454.647-2.1 1.077-.43-.807-.646-1.723-.646-2.692zM7 1.077c.754 0 1.562 1.4 1.938 3.554-1.238.323-2.638.323-3.93 0C5.438 2.477 6.246 1.077 7 1.077zM4.846 7c0-.43 0-.915.054-1.292.7.161 1.4.215 2.1.215.7 0 1.4-.054 2.1-.215.054.377.054.861.054 1.292 0 .43 0 .915-.054 1.292-1.346-.323-2.854-.323-4.2 0-.054-.377-.054-.861-.054-1.292zm5.277-1.615c.754-.27 1.454-.647 2.1-1.077.43.807.646 1.723.646 2.692 0 .97-.215 1.885-.646 2.692-.646-.43-1.346-.807-2.1-1.077.054-.538.108-1.077.108-1.615s-.054-1.077-.108-1.615zm1.562-1.993c-.485.377-1.077.7-1.67.916-.215-1.131-.538-2.154-1.023-2.854 1.077.377 1.993 1.023 2.693 1.938zM5.008 1.454c-.431.7-.808 1.67-1.023 2.854-.593-.216-1.185-.539-1.67-.916.7-.915 1.616-1.561 2.693-1.938zm-2.693 9.154c.485-.377 1.077-.7 1.67-.916.215 1.131.538 2.154 1.023 2.854-1.077-.377-1.993-1.023-2.693-1.938zm6.677 1.938c.431-.754.808-1.723 1.023-2.854.593.216 1.185.539 1.67.916-.7.915-1.616 1.561-2.693 1.938z"
+                                                                        transform="translate(-193 -128) translate(12 104) translate(181 23) translate(0 1)" />
+                                                                </g>
+                                                            </g>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </svg>
+                                        </span>
                                         <p class="subHeading">Risky Sites</p>
                                     </div>
                                     <div class="accordionBody acc-body">
@@ -936,6 +953,21 @@
                                 </div>
                                 <div class="flex accordionContainer directionColumn">
                                     <div class="accordionHeader flex alignCenter acc-toggler">
+                                        <span class="listViewPieDataIcon flex alignCenter">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="16" viewBox="0 0 11 16">
+                                                <g fill="none" fill-rule="evenodd">
+                                                    <g fill="#8995A8" fill-rule="nonzero">
+                                                        <g>
+                                                            <g>
+                                                                <path
+                                                                    d="M10.158 8.894c-.208.79-1.041 2.546-1.041 2.546l-2.657-.664s.243-1.429.074-1.98c-.177-.58-.394-1.506-.394-2.39 0-1.227.232-1.703.81-2.633.284-.459.99-.777 1.63-.744.39.02.782.157 1.104.45.447.408.683 1.05.776 1.81.182 1.485.126 1.971-.302 3.605zm-4.672 4.601c-.16.49-.254.952-.169 1.488.052.326.271.597.707.794.483.218.925.209 1.01.212.415-.064.717-.252.946-.525.486-.577.804-2.636.804-2.636l-2.775-.738s-.375.956-.523 1.405zM.274 5.66c.116.81.741 2.65.741 2.65l2.716-.354s-.077-1.448.154-1.975c.243-.556.566-1.45.667-2.33.14-1.218-.034-1.717-.501-2.708-.23-.488-.895-.886-1.534-.927-.39-.025-.794.066-1.148.32C.878.69.57 1.3.39 2.043.039 3.498.038 3.987.275 5.659zm3.753 3.653l-2.84.414s.078 2.081.493 2.711c.196.297.474.519.88.63.084.007.523.067 1.027-.094.456-.145.705-.389.794-.707.147-.523.107-.992.004-1.497-.095-.464-.358-1.457-.358-1.457z"
+                                                                    transform="translate(-195 -204) translate(12 104) translate(183 100)" />
+                                                            </g>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </svg>
+                                        </span>
                                         <p class="subHeading">Trackers</p>
                                     </div>
                                     <div class="accordionBody acc-body">
@@ -969,7 +1001,7 @@
                         <div class="whiteContainer totalDataViewContainer">
                             <div class="totalDataViewHeader flex alignCenter">
                                 <span>Total</span>
-                                <span stat-desc="total-count" class="viewDataNumber">70</span>
+                                <span stat-desc="total-count" class="viewDataNumber">0</span>
                             </div>
                             <div class="totalDataViewBody">
                                 <ul>
@@ -995,7 +1027,7 @@
                                                     Total sites blocked
                                                 </span>
                                             <span stat-desc="risky" class="viewDataNumber green">
-                                                    23
+                                                    0
                                                 </span>
                                         </div>
                                     </li>
@@ -1021,7 +1053,7 @@
                                                     Total trackers blocked
                                                 </span>
                                             <span stat-desc="track" class="viewDataNumber blue">
-                                                    47
+                                                    0
                                                 </span>
                                         </div>
                                     </li>
