--- a/popup.html
+++ b/popup.html
@@ -575,6 +575,12 @@
                             <div class="clearDataButtonContent">
                                 <button class="clearData disabled">
                                     <span class="clearingDataText">Clear Data</span>
+                                    <span class="clearingProgressDone" style="display: none;">
+                                        <svg class="" height="35px" width="35px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                            <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none" />
+                                            <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
+                                        </svg>
+                                    </span>
                                     <span class="clearingInProgress" style="display: none;">
                                         <svg height="30px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
                                             <circle cx="50" cy="50" fill="none" stroke="#ffffff" stroke-width="10" r="35"
